implemented query logic; added bodyFormat functionality; updated swagger
